--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
       <li><a href="#" class="header__link">En</a></li>
     </ul>
   </header>
+  <section class="lead">
+    <h1 class="lead__title">Путешествия по России</h1>
+    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <img class="lead__img" src="./images/lead-polka.jpg" alt="Человек лежит спиной на нижней боковой полке поезда">
+    <p class="lead__text">ваша полка — верхняя</p>
+  </section>
 </body>
 </html>
