--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body class="root">
   <header class="header">
-    <div class="logo"></div>
-    <ul class="header__lang">
-      <li><a href="#" class="header__link">Ru</a></li>
-      <li><a href="#" class="header__link">En</a></li>
+    <div class="header__logo"></div>
+    <ul class="header__langs">
+      <li><a href="#" class="header__lang-link">Ru</a></li>
+      <li><a href="#" class="header__lang-link">En</a></li>
     </ul>
   </header>
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-    <img class="lead__img" src="./images/lead-polka.jpg" alt="Человек лежит спиной на нижней боковой полке поезда">
-    <p class="lead__text">ваша полка — верхняя</p>
+    <img class="lead__image" src="./images/lead-polka.jpg" alt="Человек лежит спиной на нижней боковой полке поезда">
+    <p class="lead__caption">ваша полка — верхняя</p>
+  </section>
+  <section class="intro">
+    <h2 class="intro__title">Чего мы там не видели?</h2>
+    <p class="intro__text"></p>
   </section>
 </body>
 </html>
