Вёрстка блока photo-grid.

--- a/index.html
+++ b/index.html
@@ -31,5 +31,19 @@
       <li>Аэропортов 241</li>
     </ul>
   </section>
+  <section class="photo-grid">
+    <img src="./images/photo-grid-train.jpg" alt="Вид из вагона, едующего поезда" class="photo-grid__item">
+    <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид сверху на Атарва турси" class="photo-grid__item">
+    <img src="./images/photo-grid-tuman.jpg" alt="Стоги сена в тумане" class="photo-grid__item">
+    <img src="./images/photo-grid-sochi.jpg" alt="Вид сверху на лес в Сочи" class="photo-grid__item">
+    <img src="./images/photo-grid-arisa.jpg" alt="Колесо машины на прочразном льду" class="photo-grid__item">
+    <img src="./images/photo-grid-baikal.jpg" alt="Вид на песчатный берег Байкала" class="photo-grid__item">
+    <img src="./images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
+    <img src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода на фоне бетонных конусов" class="photo-grid__item">
+    <img src="./images/photo-grid-kamchatka-1.jpg" alt="Вид сверху на горы Камчатки" class="photo-grid__item">
+    <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вид сбоку на одну из гор Камчатки" class="photo-grid__item">
+    <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на возвышенность рядом с озером Байкал" class="photo-grid__item">
+    <img src="./images/photo-grid-ergaki.jpg" alt="Парк Ергаки" class="photo-grid__item">
+  </section>
 </body>
 </html>
