--- a/index.html
+++ b/index.html
@@ -45,5 +45,17 @@
     <img src="./images/photo-grid-baikal-2.jpg" alt="Вид на возвышенность рядом с озером Байкал" class="photo-grid__item">
     <img src="./images/photo-grid-ergaki.jpg" alt="Парк Ергаки" class="photo-grid__item">
   </section>
+  <footer class="footer">
+    <nav>
+      <ul class="footer__links">
+        <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">&copy; 2022. Игорь Подгорный</p>
+  </footer>
 </body>
 </html>
