Прееведение проекта к требованиям по чек-листу. Переделывание блока Cover.

--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
     <img class="lead__image" src="./images/lead-polka.jpg" alt="Человек лежит спиной на нижней боковой полке поезда">
     <p class="lead__caption">ваша полка — верхняя</p>
   </section>
-  <section class="intro">
-    <h2 class="intro__title">Чего мы там не видели?</h2>
-    <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-    <ul class="intro__list">
-      <li>Часовых поясов <span class="intro__digit">11</span></li>
-      <li>Объектов природного наследия ЮНЕСКО <span class="intro__digit">12</span></li>
-      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__digit">16</span></li>
-      <li>Природных заповедников <span class="intro__digit">105</span></li>
-      <li>Аэропортов <span class="intro__digit">241</span></li>
-    </ul>
-  </section>
+  <div class="section">
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li>Часовых поясов <span class="intro__digit">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__digit">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__digit">16</span></li>
+        <li>Природных заповедников <span class="intro__digit">105</span></li>
+        <li>Аэропортов <span class="intro__digit">241</span></li>
+      </ul>
+    </section>
+  </div>
   <section class="photo-grid">
     <img src="./images/photo-grid-train.jpg" alt="Вид из вагона, едующего поезда" class="photo-grid__item">
     <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид сверху на Атарва турси" class="photo-grid__item">
@@ -114,7 +116,7 @@
     </article>
   </section>
   <section class="cover">
-    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
+    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link cover__background">
       <h2 class="cover__title">До Байкала «на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     </a>
